更新wt下的静态文件

--- a/src/main/webapp/static/wt/css/theme.css
+++ b/src/main/webapp/static/wt/css/theme.css
@@ -1858,7 +1858,7 @@ background-color: #f2be35;
 }
 
 .section-blockquote-4 {
-  background-image: url(../images/bg-1.jpg);
+  background-image: url(../images/bg-1_2.jpg);
 }
 
 .b-blockquote-4 {
