--- a/src/main/webapp/static/wt/css/webSocket.css
+++ b/src/main/webapp/static/wt/css/webSocket.css
@@ -13,9 +13,20 @@ div {
     text-align: center;
 }
 #left_panel {
+    border: thin #eeeeee;
+    border-right-style: solid;
+    width: 200px;
+    height: 80%;
     float: left;
-    width: 20%;
-    height: 100%;
+    position: absolute;
+    background-color: #ffffff;
+}
+#main_panel {
+    background-color: #ffffff;
+    float: right;
+    width: 800px;
+    height: 80%;
+    margin-left: 200px;
     position: absolute;
 }
 #talk_list {
